agregando section figuras

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <main class="contenido-principal contenedor">
       <div class="titulos-destacados">
         <h1>Bienvenidos a Tu Manguita</h1>
-        <h2>Destacados</h2>
+        <h2>Mangas destacados del Mes</h2>
       </div>
 
       <section class="destacados">
@@ -90,6 +90,30 @@
         </div>
       </section>
     </main>
+
+    <section class="seccion-figuras contenedor">
+      <div class="titulos-destacados">
+        <h2>Nuestras figuras</h2>
+      </div>
+      <div class="figuras">
+        <div class="articulados">
+          <a href="#">
+            <img src="/assets/img/figuras/articuladas/imagen-articulados.jpg" alt="imagen articulados">
+          </a>
+          <div class="capa">
+            <a href="#"><h3>Figuras Articuladas</h3></a>
+          </div>
+        </div>
+        <div class="articulados">
+          <a href="#">
+            <img src="/assets/img/figuras/articuladas/imagen-estatuas.jpg" alt="imagen estatuas">
+          </a>
+          <div class="capa">
+            <a href="#"><h3>Figuras Grandistas</h3></a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <div>
       <div class="wave"></div>
