--- a/index.html
+++ b/index.html
@@ -113,6 +113,18 @@
           </div>
         </div>
       </div>
+      <div class="nosotros titulos-destacados">
+        <h3>Sobre Nosotros</h3>
+        <p>Bienvenidos a "Tu Manguita"
+          Somos 2 hermano que desde chicos soñamos tener nuestro propio local de ventas
+          en general de articulos que nos gusten.
+          Hace 4 años comenzamos vendiendo mangas por redes sociales y hoy disponemos de un
+          local fisico con amplio stock tanto de Mangas coleccionables como de Figuras...
+          Y VAMOS POR MAS!!
+          Gracias por confiar en TU MANGUITA❤️
+        </p>
+
+      </div>
     </section>
 
     <div>
